Started implementig service (findbyapikey) (first command etc) issued by: Aron Rabar @rab210635@spengergasse.at